# web-application

./: .gitignore  README.md  add-quantity-to-sales.sql  alter-table-proj3.sql  createtable.sql  delete-data-from-xml.sql  delete-today-sale.sql  fulltextSearch.sql  set-missing-rating-to-zero.sql  stored-procedure.sql
android/: build.gradle
android/app/: build.gradle
configuration_files/: 000-default.conf  000-default.conf.2  gcp-000-default.conf  mysqlrouter.conf  ports.conf
encrypt_password/: README.md  pom.xml
fuzzy_search/: CMakeLists.txt  README.md  edit_distance.cpp  edit_distance.hpp  fuzzy_search.sql  main.c  main.cpp  min_edit_distance.c  min_edit_distance.h  unit_test.c
server/: .gitignore  JMeterTest.jmx  Makefile  README.md  Test Plan.jmx  log_processing.py  minify.py  pom.xml
server/WebContent/: 404.html  advance.html  cart.html  dashboard.html  employee_login.html  index.css  index.html  index.js  login.html  main-page.css  main-page.html  main-page.js  movie-list.css  movie-list.html  movie-list.js  nav.html  payment-confirmation.html  payment.html  single-movie.html  single-movie.js  single-star.html  single-star.js  stars.html  suggestion.html  suggestion.js  util.js
server/jmeter_test/: .gitignore  classes.py  config.py  log_processing.py  log_processing_manual.py  run_tests.py  scaled_case_1_http_1_thread.jmx  scaled_case_2_http_10_threads.jmx  scaled_case_3_http_10_threads_no_cp.jmx  single_case_1_http_1_thread.jmx  single_case_2_http_10_threads.jmx  single_case_3_https_10_threads.jmx  (+2 more)
xml_parsing/: .gitignore  Makefile  README.md  pom.xml
(+94 files in other folders)
